[package]
name = "rust-playpen"
version = "0.1.0"
authors = ["Federico Menozzi <federicogmenozzi@gmail.com>"]

[dependencies]
quicksort = { path = "quicksort" }
cli-args = { path = "cli-args" }
cli-utils = { path = "cli-utils" }
gui-test = { path = "gui-test" }
glium-test = { path = "glium-test" }
gfx-test = { path = "gfx-test" }

[workspace]
